[package]
name = "cosmos-rust-interface"
authors = ["Philipp Schlütermann <philipp.schluetermann@udo.edu>"]
description = "Interface with cosmos chains, used by cosmos-rust-bot"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
cosmos-rust-package = { path = "../cosmos-rust-package", optional = true }

tokio = { version = "1.4", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secp256k1 = { version = "0.20.3", default-features = false }
reqwest = "0.11.6"
enum-as-inner = "0.3.3"
rust-crypto = "^0.2"
base64 = "0.13.0"
log = "0.4.14"
thiserror = { version = "1.0.21" }
eyre = "0.6"
rust_decimal = "1.12.2"
chrono = "0.4"
strum = "0.24"
strum_macros = "0.24"



[features]
default = ["interface","postproc","db"]
interface = ["cosmos-rust-package"]
postproc = ["cosmos-rust-package"]
db = []


[profile.release]
# Enable link-time optimization, eliminates more code and inlines across crate boundaries.
# Default: false
lto = true

# codegen-units of 1 gives best optimization, but disables parallel building.
# Default: 16
codegen-units = 1

# Includes debug information in release builds. Necessary for profiling. Does not
# slow down the executable.
debug = true

# The default optimization level is 3 for release mode builds.
# 0 means disable optimization and is the default for debug mode buids.
# (Setting opt-level=1 for debug builds is a good way of speeding them up a bit.)
# "s" means optimize for size, "z" reduces size even more.
opt-level = 3