[package]
name = "cosmos-rust-interface"
authors = ["Philipp Schlütermann <philipp.schluetermann@udo.edu>"]
description = "Interface with cosmos chains, used by cosmos-rust-bot"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
cosmos-rust-package = { git = "https://github.com/Philipp-Sc/cosmos-rust-package.git", optional = true }

tokio = { version = "1.4", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secp256k1 = { version = "0.20.3", default-features = false }
reqwest = "0.11.6"
enum-as-inner = "0.3.3"
rust-crypto = "^0.2"
base64 = "0.13.0"
log = "0.4.14"
thiserror = { version = "1.0.21" }
eyre = "0.6"
rust_decimal = "1.12.2"
chrono = "0.4"
strum = "0.24"
strum_macros = "0.24"
sled = { version = "0.34.7", features = ["compression"], optional = true }
bincode = { version = "1.3.3", optional = true }

[features]
default = ["interface","postproc","db"]
interface = ["cosmos-rust-package"]
postproc = ["cosmos-rust-package"]
db = ["sled","bincode"]
