[package]
name = "cosmos-rust-interface"
authors = ["Philipp Schlütermann <philipp.schluetermann@udo.edu>"]
description = "Interface with cosmos chains, used by cosmos-rust-bot"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
#cosmos-rust-package = { git = "https://github.com/Philipp-Sc/cosmos-rust-package.git", optional = true }
cosmos-rust-package = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
reqwest.workspace = true
enum-as-inner.workspace = true
log.workspace = true
rust_decimal.workspace = true
chrono.workspace = true
strum.workspace = true
strum_macros.workspace = true
sled = { workspace = true, features = ["compression"], optional = true }
bincode = { workspace = true, optional = true }
base64.workspace = true
secp256k1 = { workspace = true, default-features = false }
rust-crypto = "^0.2"
thiserror = { version = "1.0.21" }
eyre = "0.6"
rust-bert-fraud-detection-socket-ipc = { workspace = true, optional = true }
rust-openai-gpt-tools-socket-ipc = { workspace = true, optional = true }
rust-link-to-text-socket-ipc = { workspace = true, optional = true }
nnsplit = { workspace = true, features= ["tract-backend","model-loader"], optional = true }
#csv = "1.1.6" # temporary
csv = "1.1.6"

[features]
default = ["interface","postproc","db"]
interface = ["cosmos-rust-package","rust-bert-fraud-detection-socket-ipc","rust-openai-gpt-tools-socket-ipc","rust-link-to-text-socket-ipc","nnsplit"]
postproc = ["cosmos-rust-package"]
db = ["sled","bincode"]
